Finalizing B+ tree structure (no, actually) Known bugs: - splitting of the internal  node of the tree can cause losing data (key-value pair disappears) and probably even little memory leak. Reason: wrong designed splitting alghorithm (to be fixed asap).
Oh and... README is still incomplete....... nah, not today.
P.S. Hi future, probably more responseable, me, who actualy completes TODOs before commiting.

--- a/StateDB/StateDB.vcxproj
+++ b/StateDB/StateDB.vcxproj
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="bplus_tree.h" />
+    <ClInclude Include="bpt.h" />
     <ClInclude Include="bpt_base.h" />
     <ClInclude Include="bpt_internal.h" />
     <ClInclude Include="config.h" />
