--- a/StateDB/StateDB.vcxproj.filters
+++ b/StateDB/StateDB.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClInclude Include="db_vector.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="_bplus_tree.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="bplus_tree.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
@@ -74,6 +71,9 @@
     </ClInclude>
     <ClInclude Include="bpt.h">
       <Filter>Файлы заголовков\bplus</Filter>
+    </ClInclude>
+    <ClInclude Include="features_impl.h">
+      <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
