--- a/StateDB/StateDB.vcxproj.filters
+++ b/StateDB/StateDB.vcxproj.filters
@@ -75,6 +75,12 @@
     <ClInclude Include="features_impl.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="flags.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="record.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
