--- a/DBTestTerminal/DBTestTerminal.vcxproj
+++ b/DBTestTerminal/DBTestTerminal.vcxproj
@@ -157,6 +157,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="optionparser.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
