--- a/StateDB/StateDB.vcxproj.filters
+++ b/StateDB/StateDB.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Файлы заголовков\bplus">
       <UniqueIdentifier>{2df9d69d-0c7e-433b-88df-a974bfd373cd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Файлы заголовков\spdlog">
+      <UniqueIdentifier>{205afbe9-3cf6-45a1-9bbe-b807bc9a6e8e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -79,6 +82,45 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="record.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="version.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="spdlog\async.h">
+      <Filter>Файлы заголовков\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="spdlog\async_logger.h">
+      <Filter>Файлы заголовков\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="spdlog\common.h">
+      <Filter>Файлы заголовков\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="spdlog\formatter.h">
+      <Filter>Файлы заголовков\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="spdlog\logger.h">
+      <Filter>Файлы заголовков\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="spdlog\spdlog.h">
+      <Filter>Файлы заголовков\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="spdlog\tweakme.h">
+      <Filter>Файлы заголовков\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="spdlog\version.h">
+      <Filter>Файлы заголовков\spdlog</Filter>
+    </ClInclude>
+    <ClInclude Include="statedb.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="exceptions.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="db_wrapper.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="db.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
