--- a/StateDB/StateDB.vcxproj
+++ b/StateDB/StateDB.vcxproj
@@ -72,19 +72,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)StateDB\includes;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)StateDB\includes;$(BOOST_HOME);$(IncludePath)</IncludePath>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)StateDB\includes;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)StateDB\includes;$(BOOST_HOME);$(IncludePath)</IncludePath>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)StateDB\includes;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)StateDB\includes;$(BOOST_HOME);$(IncludePath)</IncludePath>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)StateDB\includes;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)StateDB\includes;$(BOOST_HOME);$(IncludePath)</IncludePath>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -156,6 +160,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="abstract_stream.h" />
+    <ClInclude Include="asio_server.h" />
+    <ClInclude Include="asio_stream.h" />
     <ClInclude Include="basic_types.h" />
     <ClInclude Include="bplus_tree.h" />
     <ClInclude Include="bpt.h" />
@@ -164,6 +170,7 @@
     <ClInclude Include="client_controller.h" />
     <ClInclude Include="compile_time.h" />
     <ClInclude Include="config.h" />
+    <ClInclude Include="connection.h" />
     <ClInclude Include="db.h" />
     <ClInclude Include="dtypes_collection.h" />
     <ClInclude Include="exceptions.h" />
@@ -178,6 +185,7 @@
     <ClInclude Include="hash.h" />
     <ClInclude Include="log_utils.h" />
     <ClInclude Include="net_message.h" />
+    <ClInclude Include="net_utils.h" />
     <ClInclude Include="picosha2.h" />
     <ClInclude Include="record.h" />
     <ClInclude Include="resource.h" />
@@ -200,8 +208,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="abstract_stream.cpp" />
+    <ClCompile Include="asio_server.cpp" />
+    <ClCompile Include="asio_stream.cpp" />
     <ClCompile Include="basic_types.cpp" />
     <ClCompile Include="config.cpp" />
+    <ClCompile Include="connection.cpp" />
     <ClCompile Include="db.cpp" />
     <ClCompile Include="db_header.cpp" />
     <ClCompile Include="dtypes_collection.cpp" />
