--- a/StateDatabase/StateDatabase.vcxproj.filters
+++ b/StateDatabase/StateDatabase.vcxproj.filters
@@ -13,6 +13,21 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Исходные файлы\net">
+      <UniqueIdentifier>{8d28e273-16c0-476a-ba2e-44a77087f63d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Исходные файлы\utils">
+      <UniqueIdentifier>{4254b69e-64e9-46ae-8c2a-576ddaf63447}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Файлы заголовков\net">
+      <UniqueIdentifier>{5e93d821-f2eb-4ef5-a55e-0d82f11e8e09}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Файлы заголовков\utils">
+      <UniqueIdentifier>{9d37670a-777c-486f-b071-b4d6ee173b28}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Файлы заголовков\bpt">
+      <UniqueIdentifier>{78b4183e-b557-4089-bff1-3a70ff28a329}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -21,25 +36,7 @@
     <ClInclude Include="pch.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="abstract_stream.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="asio_server.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="asio_stream.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="basic_types.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="bpt.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="bpt_base.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="bpt_internal.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="commands.h">
@@ -51,16 +48,10 @@
     <ClInclude Include="config.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="connection.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="db.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="db_header.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="db_vector.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="db_wrapper.h">
@@ -82,9 +73,6 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="hash.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="leaf.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="list.h">
@@ -117,33 +105,57 @@
     <ClInclude Include="version.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="dynamic_storage.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="logging.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="deadline_timers.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="abstract_stream.h">
+      <Filter>Файлы заголовков\utils</Filter>
+    </ClInclude>
+    <ClInclude Include="asio_server.h">
+      <Filter>Файлы заголовков\net</Filter>
+    </ClInclude>
+    <ClInclude Include="asio_stream.h">
+      <Filter>Файлы заголовков\utils</Filter>
+    </ClInclude>
+    <ClInclude Include="bigint.h">
+      <Filter>Файлы заголовков\utils</Filter>
+    </ClInclude>
+    <ClInclude Include="bpt.h">
+      <Filter>Файлы заголовков\bpt</Filter>
+    </ClInclude>
+    <ClInclude Include="bpt_base.h">
+      <Filter>Файлы заголовков\bpt</Filter>
+    </ClInclude>
+    <ClInclude Include="bpt_internal.h">
+      <Filter>Файлы заголовков\bpt</Filter>
+    </ClInclude>
+    <ClInclude Include="connection.h">
+      <Filter>Файлы заголовков\net</Filter>
+    </ClInclude>
+    <ClInclude Include="db_vector.h">
+      <Filter>Файлы заголовков\utils</Filter>
+    </ClInclude>
+    <ClInclude Include="dynamic_storage.h">
+      <Filter>Файлы заголовков\utils</Filter>
+    </ClInclude>
+    <ClInclude Include="leaf.h">
+      <Filter>Файлы заголовков\bpt</Filter>
+    </ClInclude>
     <ClInclude Include="format_utils.h">
+      <Filter>Файлы заголовков\utils</Filter>
+    </ClInclude>
+    <ClInclude Include="dispatcher.h">
+      <Filter>Исходные файлы\utils</Filter>
+    </ClInclude>
+    <ClInclude Include="dtypes.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="abstract_stream.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="asio_server.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="asio_stream.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="basic_types.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="db.cpp">
@@ -158,25 +170,34 @@
     <ClCompile Include="dtypes_collection.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="messages_dispatcher.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="net_message.cpp">
-      <Filter>Исходные файлы</Filter>
+    <ClCompile Include="net_utils.cpp">
+      <Filter>Исходные файлы\utils</Filter>
     </ClCompile>
     <ClCompile Include="utils.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Исходные файлы\utils</Filter>
     </ClCompile>
-    <ClCompile Include="commands.cpp">
-      <Filter>Исходные файлы</Filter>
+    <ClCompile Include="abstract_stream.cpp">
+      <Filter>Исходные файлы\utils</Filter>
+    </ClCompile>
+    <ClCompile Include="asio_server.cpp">
+      <Filter>Исходные файлы\net</Filter>
+    </ClCompile>
+    <ClCompile Include="asio_stream.cpp">
+      <Filter>Исходные файлы\utils</Filter>
     </ClCompile>
     <ClCompile Include="connection.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="net_utils.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Исходные файлы\net</Filter>
     </ClCompile>
     <ClCompile Include="format_utils.cpp">
+      <Filter>Исходные файлы\utils</Filter>
+    </ClCompile>
+    <ClCompile Include="net_message.cpp">
+      <Filter>Исходные файлы\net</Filter>
+    </ClCompile>
+    <ClCompile Include="messages_dispatcher.cpp">
+      <Filter>Исходные файлы\net</Filter>
+    </ClCompile>
+    <ClCompile Include="record.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
