Implementing some shortcuts for write operation. Implementing ping handler. Still have a lot of handlers not implemented. Finishig db_object (ex-db_record) class implementation. memory_ptr utility class (something like smart pointer but... NO, not that smart actually). Implementing binary storage for dynamic_storage, also a little fix for dynamic_storage::construct<T>(TArgs...).

--- a/StateDatabase/StateDatabase.vcxproj.filters
+++ b/StateDatabase/StateDatabase.vcxproj.filters
@@ -90,9 +90,6 @@
     <ClInclude Include="net_utils.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="record.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="segment_container.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
@@ -153,6 +150,15 @@
     <ClInclude Include="dtypes.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="object.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="memory_ptr.h">
+      <Filter>Файлы заголовков\utils</Filter>
+    </ClInclude>
+    <ClInclude Include="empty_handler.h">
+      <Filter>Файлы заголовков\net</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -197,7 +203,13 @@
     <ClCompile Include="messages_dispatcher.cpp">
       <Filter>Исходные файлы\net</Filter>
     </ClCompile>
-    <ClCompile Include="record.cpp">
+    <ClCompile Include="dtypes.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="object.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="memory_ptr.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
