--- a/StateDatabase/StateDatabase.vcxproj
+++ b/StateDatabase/StateDatabase.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="dtypes_collection.h" />
     <ClInclude Include="dtype_decl.h" />
     <ClInclude Include="dynamic_storage.h" />
+    <ClInclude Include="empty_handler.h" />
     <ClInclude Include="exceptions.h" />
     <ClInclude Include="flags.h" />
     <ClInclude Include="format_utils.h" />
@@ -197,11 +198,12 @@
     <ClInclude Include="list.h" />
     <ClInclude Include="logging.h" />
     <ClInclude Include="log_utils.h" />
+    <ClInclude Include="memory_ptr.h" />
     <ClInclude Include="messages_dispatcher.h" />
     <ClInclude Include="net_message.h" />
     <ClInclude Include="net_utils.h" />
+    <ClInclude Include="object.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="record.h" />
     <ClInclude Include="segment_container.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="utils.h" />
@@ -214,19 +216,21 @@
     <ClCompile Include="connection.cpp" />
     <ClCompile Include="db.cpp" />
     <ClCompile Include="db_header.cpp" />
+    <ClCompile Include="dtypes.cpp" />
     <ClCompile Include="dtypes_collection.cpp" />
     <ClCompile Include="dtype_decl.cpp" />
     <ClCompile Include="format_utils.cpp" />
+    <ClCompile Include="memory_ptr.cpp" />
     <ClCompile Include="messages_dispatcher.cpp" />
     <ClCompile Include="net_message.cpp" />
     <ClCompile Include="net_utils.cpp" />
+    <ClCompile Include="object.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="record.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
