Fixing some silly typos and bugs in data types implementors. Removing debug_print method here and there. Changing message preamble. Objects now store its key.

--- a/StateDatabase/StateDatabase.vcxproj
+++ b/StateDatabase/StateDatabase.vcxproj
@@ -184,6 +184,7 @@
     <ClInclude Include="dispatcher.h" />
     <ClInclude Include="dtypes.h" />
     <ClInclude Include="dtypes_collection.h" />
+    <ClInclude Include="dtypes_utils.h" />
     <ClInclude Include="dtype_decl.h" />
     <ClInclude Include="dynamic_storage.h" />
     <ClInclude Include="empty_handler.h" />
